--- a/instructions.ipynb
+++ b/instructions.ipynb
@@ -85,22 +85,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "3cfdd871",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "zmq_url=tcp://127.0.0.1:6000\n",
-      "web_url=http://127.0.0.1:7000/static/\n",
-      "opened: <meshcat.servers.zmqserver.WebSocketHandler object at 0x7f65049f86a0>\n",
-      "closed: <meshcat.servers.zmqserver.WebSocketHandler object at 0x7f65049f86a0>\n",
-      "^C\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!meshcat-server"
    ]
@@ -119,6 +107,13 @@
    "id": "60f7a783",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "pybullet build time: Oct 14 2023 15:43:53\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -206,35 +201,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "953a9d43",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Nb joints = 16 (nq=15,nv=15)\n",
-      "  Joint 0 universe: parent=0\n",
-      "  Joint 1 CHEST_JOINT0: parent=0\n",
-      "  Joint 2 HEAD_JOINT0: parent=1\n",
-      "  Joint 3 HEAD_JOINT1: parent=2\n",
-      "  Joint 4 LARM_JOINT0: parent=1\n",
-      "  Joint 5 LARM_JOINT1: parent=4\n",
-      "  Joint 6 LARM_JOINT2: parent=5\n",
-      "  Joint 7 LARM_JOINT3: parent=6\n",
-      "  Joint 8 LARM_JOINT4: parent=7\n",
-      "  Joint 9 LARM_JOINT5: parent=8\n",
-      "  Joint 10 RARM_JOINT0: parent=1\n",
-      "  Joint 11 RARM_JOINT1: parent=10\n",
-      "  Joint 12 RARM_JOINT2: parent=11\n",
-      "  Joint 13 RARM_JOINT3: parent=12\n",
-      "  Joint 14 RARM_JOINT4: parent=13\n",
-      "  Joint 15 RARM_JOINT5: parent=14\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(robot.model)"
    ]
@@ -249,21 +219,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "d35965de",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from tools import collision\n",
     "collision(robot, robot.q0)"
@@ -290,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "47f46aee",
    "metadata": {},
    "outputs": [
@@ -298,14 +257,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Left hand joint name:  LARM_EFF\n",
-      "Left hand joint placement: \n",
-      "  R =\n",
-      "0.0707372 -0.997495         0\n",
-      " 0.997495 0.0707372         0\n",
-      "        0         0         1\n",
-      "  p =  0.45  0.28 0.851\n",
-      "\n"
+      "Left hand joint name:  LARM_EFF\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'robot' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/home/heng/Documents/GitHub/lab/instructions.ipynb Cell 18\u001b[0m line \u001b[0;36m7\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/heng/Documents/GitHub/lab/instructions.ipynb#X23sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mprint\u001b[39m (\u001b[39m\"\u001b[39m\u001b[39mLeft hand joint name: \u001b[39m\u001b[39m\"\u001b[39m, LEFT_HAND)\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/heng/Documents/GitHub/lab/instructions.ipynb#X23sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpinocchio\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpin\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/heng/Documents/GitHub/lab/instructions.ipynb#X23sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m q \u001b[39m=\u001b[39m robot\u001b[39m.\u001b[39mq0\u001b[39m.\u001b[39mcopy()\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/heng/Documents/GitHub/lab/instructions.ipynb#X23sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39m#update the frame positions in robot.data given q\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/heng/Documents/GitHub/lab/instructions.ipynb#X23sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m pin\u001b[39m.\u001b[39mframesForwardKinematics(robot\u001b[39m.\u001b[39mmodel,robot\u001b[39m.\u001b[39mdata,q)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'robot' is not defined"
      ]
     }
    ],
@@ -342,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "7ba2ce30",
    "metadata": {},
    "outputs": [],
@@ -452,7 +415,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
