non-working RRT based path finding

--- a/instructions.ipynb
+++ b/instructions.ipynb
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "60f7a783",
    "metadata": {},
    "outputs": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "5a3385f4",
    "metadata": {},
    "outputs": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "58f37692",
    "metadata": {},
    "outputs": [
@@ -175,7 +175,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,10 +201,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "953a9d43",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nb joints = 16 (nq=15,nv=15)\n",
+      "  Joint 0 universe: parent=0\n",
+      "  Joint 1 CHEST_JOINT0: parent=0\n",
+      "  Joint 2 HEAD_JOINT0: parent=1\n",
+      "  Joint 3 HEAD_JOINT1: parent=2\n",
+      "  Joint 4 LARM_JOINT0: parent=1\n",
+      "  Joint 5 LARM_JOINT1: parent=4\n",
+      "  Joint 6 LARM_JOINT2: parent=5\n",
+      "  Joint 7 LARM_JOINT3: parent=6\n",
+      "  Joint 8 LARM_JOINT4: parent=7\n",
+      "  Joint 9 LARM_JOINT5: parent=8\n",
+      "  Joint 10 RARM_JOINT0: parent=1\n",
+      "  Joint 11 RARM_JOINT1: parent=10\n",
+      "  Joint 12 RARM_JOINT2: parent=11\n",
+      "  Joint 13 RARM_JOINT3: parent=12\n",
+      "  Joint 14 RARM_JOINT4: parent=13\n",
+      "  Joint 15 RARM_JOINT5: parent=14\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print(robot.model)"
    ]
@@ -219,10 +244,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "d35965de",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from tools import collision\n",
     "collision(robot, robot.q0)"
@@ -238,14 +274,6 @@
     "I have modified the URDF files to add frames that are relevant for the tasks you need to accomplish.\n",
     "On the robot, I have created fixed joints attached to the tip of each effectors, called ```LARM_EFF``` and ```RARM_EFF```. Note that because they are fixed joints, they do not appear in the robot model and do not change the dimension of the configuration space. These names are defined for you in the config.py file as well. "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7a389c84",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
