--- a/test.ipynb
+++ b/test.ipynb
@@ -98,6 +98,309 @@
     "        # plt.scatter(node.point[0], node.point[1], c='b')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.         0.        ]\n",
+      " [0.33333333 0.33333333]\n",
+      " [0.66666667 0.66666667]\n",
+      " [1.         1.        ]\n",
+      " [1.33333333 0.66666667]\n",
+      " [1.66666667 0.33333333]\n",
+      " [2.         0.        ]\n",
+      " [2.33333333 0.33333333]\n",
+      " [2.66666667 0.66666667]\n",
+      " [3.         1.        ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from scipy.interpolate import interp1d\n",
+    "\n",
+    "def resample_path_scipy(points, n_samples):\n",
+    "    # Calculate the cumulative distance along the path\n",
+    "    distances = np.sqrt(np.sum(np.diff(points, axis=0)**2, axis=1))\n",
+    "    cum_dist = np.insert(np.cumsum(distances), 0, 0)\n",
+    "\n",
+    "    # Create an interpolating function for each dimension\n",
+    "    interpolators = [interp1d(cum_dist, points[:, i], kind='linear') for i in range(points.shape[1])]\n",
+    "\n",
+    "    # Regular intervals along the path\n",
+    "    sample_at = np.linspace(0, cum_dist[-1], n_samples)\n",
+    "\n",
+    "    # Resample the path\n",
+    "    resampled_points = np.array([interpolator(sample_at) for interpolator in interpolators]).T\n",
+    "\n",
+    "    return resampled_points\n",
+    "\n",
+    "# Example usage\n",
+    "points = np.array([[0, 0], [1, 1], [2, 0], [3, 1]])\n",
+    "n_samples = 10\n",
+    "resampled = resample_path_scipy(points, n_samples)\n",
+    "print(resampled)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def row_seperator(array2d, row_indices):\n",
+    "    return np.split(array2d, row_indices)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = np.array([[0, 0], [1, 1], [2, 0], [3, 1]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 0],\n",
+       "       [2, 0]])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n[[0, 2]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def split_rows(array2d, row_indices):\n",
+    "    # Return specified rows, remaining rows\n",
+    "    return array2d[row_indices], np.delete(array2d, row_indices, axis=0), row_indices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def restore_rows(included, excluded, indices):\n",
+    "    # Lets check if included and excluded have the same number of columns\n",
+    "    assert included.shape[1] == excluded.shape[1]\n",
+    "    # Now lets create an empty array of the original shape\n",
+    "    restored = np.empty((included.shape[0] + excluded.shape[0], included.shape[1]))\n",
+    "    included = list(included)\n",
+    "    excluded = list(excluded)\n",
+    "    index = 0\n",
+    "    while len(included) > 0 and len(excluded) > 0:\n",
+    "        if index in indices:\n",
+    "            restored[index] = included.pop(0)\n",
+    "        else:\n",
+    "            restored[index] = excluded.pop(0)\n",
+    "        index += 1\n",
+    "    return restored\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 0],\n",
+       "       [1, 1],\n",
+       "       [2, 0],\n",
+       "       [3, 1]])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = split_rows(n, [0, 2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0.],\n",
+       "       [1., 1.],\n",
+       "       [2., 0.],\n",
+       "       [0., 0.]])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "restore_rows(*a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "i = np.identity(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0., 0., 0., 0.],\n",
+       "       [0., 1., 0., 0., 0.],\n",
+       "       [0., 0., 1., 0., 0.],\n",
+       "       [0., 0., 0., 1., 0.],\n",
+       "       [0., 0., 0., 0., 1.]])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "i"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0.],\n",
+       "       [0., 1.],\n",
+       "       [0., 0.],\n",
+       "       [0., 0.],\n",
+       "       [0., 0.]])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Remove the first and second columns\n",
+    "i[:, [0, 1]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 1., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 1., 1., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 1., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 1., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 1.]])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Inverted without specifying the remaining columns\n",
+    "np.insert(i, [0, 1], i[:, [0, 1]], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 1., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 1., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 1., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 1., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 1., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 0., 1.]])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Add zero column to the second column\n",
+    "np.insert(np.identity(7), [1, 1], 0, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
